--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ nav {
     align-items: center;
     justify-content: flex-start;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 470px;
 }
 
 .resume-container{
@@ -170,10 +170,12 @@ h2, h3 {
 h4 {
     color: #000000;
     padding-top: 20px;
+    padding-bottom: 20px;
     margin-bottom: 15px;
     text-align: left;
     margin-left: 490px;
     margin-right: 20px;
+    line-height:25px
 }
 
 p {
@@ -227,4 +229,86 @@ footer {
     text-align: center;
     padding: 15px;
     margin-top: 30px;
+}
+
+/* Modal Background -------------------------------------- */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+}
+
+/* Modal Content (Popup Box) */
+.modal-content {
+    background-color: white;
+    margin: 10% auto;
+    padding: 20px;
+    width: 80%;
+    max-width: 900px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    position: relative;
+}
+
+/* Close Button */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    font-weight: bold;
+    color: black;
+    cursor: pointer;
+}
+
+/* PDF Container */
+.pdf-container embed {
+    width: 100%;
+    height: 600px;
+    border-radius: 5px;
+}
+
+/* Button Style */
+.open-button {
+    padding: 8px 15px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #748D92;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition: 0.3s;
+}
+
+.open-button:hover {
+    background-color: #A67B11;
+}
+
+
+.resume-container{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.flex_text {
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(0, 0, 0); /* Adjust as needed */
+    margin-left: 470px;
+    margin-right: 5px;
+}
+
+.norm_text {
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(0, 0, 0); /* Adjust as needed */
+    margin-left: 490px;
+    margin-right: 5px;
 }
