updated resume, projects

--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,9 @@
 /* Body */
 body {
     background-color: #d3d9d4; /* Light gray background */
-    font-size: 16px;
+    font-size: 1rem;
     color: #182B49; /* UCSD Blue */
-    padding: 20px;
+    padding: 2rem;
     /*margin: 20px;*/
 }
 
@@ -24,7 +24,7 @@ body {
 header {
     background-color: #182B49;
     color: rgb(255, 255, 255);
-    padding: 20px;
+    padding: 1rem;
 }
 
 header h1 {
@@ -32,24 +32,23 @@ header h1 {
     margin-left: 20px;
 }
 
-/* Navigation Bar */
 nav {
     background-color: #124e66;
-    padding: 18px 0;
+    padding: 1.7rem 0;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    border-radius: 15px;
+    border-radius: 1rem;
     margin-top: 0px;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-bottom: 20px;
+    margin-left: 0.1%;
+    margin-right: 0.1%;
+    margin-bottom: 1%;
 }
 
 .name {
-    font-size: 18px;
+    margin-left: 15rem;
+    margin-right: 8.5rem;
+    font-size: 1.1rem; /* Slightly smaller font for mobile */
     font-weight: 600;
-    color: white; /* Adjust as needed */
-    margin-left: 210px;
-    margin-right: 135px;
+    color: white;
 }
 
 .nav-container{
@@ -62,8 +61,8 @@ nav {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 20px;
-    margin-left: 470px;
+    margin-top: 1%;
+    margin-left: 20%;
 }
 
 .resume-container{
@@ -78,16 +77,19 @@ nav {
     display: flex;
     list-style: none;
     padding: 0;
-    margin: 0;
 }
 
 .nav-links li {
-    margin: 0 25px;
+    padding: 0;
+    margin-right: 3rem;
 }
+
 
 .nav-links a {
     text-decoration: none;
     color: white;
+    font-size: 1.1rem;
+    display: block;
 }
 
 .name a {
